Fix carousel navigation buttons positioning to align with content container

--- a/app/components/ProductsCarousel/ProductsCarousel.module.css
+++ b/app/components/ProductsCarousel/ProductsCarousel.module.css
@@ -88,11 +88,11 @@
 }
 
 .navButtonPrev {
-  left: 0.5rem !important;
+  left: max(1rem, calc((100vw - 1280px) / 2 + 1rem)) !important;
 }
 
 .navButtonNext {
-  right: 0.5rem !important;
+  right: max(1rem, calc((100vw - 1280px) / 2 + 1rem)) !important;
 }
 
 .navArrow {
